PR/44218 - David Young -- add "type" subcommand to change a partition type