sbin/gpt/type.c
@@ -1,0 +1,227 @@
+/*-
+ * Copyright (c) 2004 Marcel Moolenaar
+ * All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ *
+ * 1. Redistributions of source code must retain the above copyright
+ *    notice, this list of conditions and the following disclaimer.
+ * 2. Redistributions in binary form must reproduce the above copyright
+ *    notice, this list of conditions and the following disclaimer in the
+ *    documentation and/or other materials provided with the distribution.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
+ * IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
+ * OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
+ * IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
+ * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
+ * NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+ * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
+ * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+ * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
+ * THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ */
+
+#include <sys/cdefs.h>
+#ifdef __FBSDID
+__FBSDID("$FreeBSD: src/sbin/gpt/remove.c,v 1.10 2006/10/04 18:20:25 marcel Exp $");
+#endif
+#ifdef __RCSID
+__RCSID("$NetBSD: type.c,v 1.1 2014/09/28 08:14:51 jnemeth Exp $");
+#endif
+
+#include <sys/types.h>
+
+#include <err.h>
+#include <stddef.h>
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#include <unistd.h>
+
+#include "map.h"
+#include "gpt.h"
+
+static int all;
+static uuid_t type, newtype;
+static off_t block, size;
+static unsigned int entry;
+
+const char typemsg1[] = "type -a -T newtype device ...";
+const char typemsg2[] = "type [-b blocknr] [-i index] [-s sectors] [-t type]";
+const char typemsg3[] = "     -T newtype device ...";
+
+__dead static void
+usage_type(void)
+{
+
+	fprintf(stderr,
+            "usage: %s %s\n"
+            "       %s %s\n"
+            "       %*s %s\n", getprogname(), typemsg1,
+            getprogname(), typemsg2, (int)strlen(getprogname()), "", typemsg3);
+	exit(1);
+}
+
+static void
+chtype(int fd)
+{
+	uuid_t uuid;
+	map_t *gpt, *tpg;
+	map_t *tbl, *lbt;
+	map_t *m;
+	struct gpt_hdr *hdr;
+	struct gpt_ent *ent;
+	unsigned int i;
+
+	gpt = map_find(MAP_TYPE_PRI_GPT_HDR);
+	if (gpt == NULL) {
+		warnx("%s: error: no primary GPT header; run create or recover",
+		    device_name);
+		return;
+	}
+
+	tpg = map_find(MAP_TYPE_SEC_GPT_HDR);
+	if (tpg == NULL) {
+		warnx("%s: error: no secondary GPT header; run recover",
+		    device_name);
+		return;
+	}
+
+	tbl = map_find(MAP_TYPE_PRI_GPT_TBL);
+	lbt = map_find(MAP_TYPE_SEC_GPT_TBL);
+	if (tbl == NULL || lbt == NULL) {
+		warnx("%s: error: run recover -- trust me", device_name);
+		return;
+	}
+
+	/* Change type of all matching entries in the map. */
+	for (m = map_first(); m != NULL; m = m->map_next) {
+		if (m->map_type != MAP_TYPE_GPT_PART || m->map_index < 1)
+			continue;
+		if (entry > 0 && entry != m->map_index)
+			continue;
+		if (block > 0 && block != m->map_start)
+			continue;
+		if (size > 0 && size != m->map_size)
+			continue;
+
+		i = m->map_index - 1;
+
+		hdr = gpt->map_data;
+		ent = (void*)((char*)tbl->map_data + i *
+		    le32toh(hdr->hdr_entsz));
+		le_uuid_dec(ent->ent_type, &uuid);
+		if (!uuid_is_nil(&type, NULL) &&
+		    !uuid_equal(&type, &uuid, NULL))
+			continue;
+
+		/* Change the primary entry. */
+		le_uuid_enc(ent->ent_type, &newtype);
+
+		hdr->hdr_crc_table = htole32(crc32(tbl->map_data,
+		    le32toh(hdr->hdr_entries) * le32toh(hdr->hdr_entsz)));
+		hdr->hdr_crc_self = 0;
+		hdr->hdr_crc_self = htole32(crc32(hdr, le32toh(hdr->hdr_size)));
+
+		gpt_write(fd, gpt);
+		gpt_write(fd, tbl);
+
+		hdr = tpg->map_data;
+		ent = (void*)((char*)lbt->map_data + i *
+		    le32toh(hdr->hdr_entsz));
+
+		/* Change the secondary entry. */
+		le_uuid_enc(ent->ent_type, &newtype);
+
+		hdr->hdr_crc_table = htole32(crc32(lbt->map_data,
+		    le32toh(hdr->hdr_entries) * le32toh(hdr->hdr_entsz)));
+		hdr->hdr_crc_self = 0;
+		hdr->hdr_crc_self = htole32(crc32(hdr, le32toh(hdr->hdr_size)));
+
+		gpt_write(fd, lbt);
+		gpt_write(fd, tpg);
+		printf("partition %d type changed\n", m->map_index);
+	}
+}
+
+int
+cmd_type(int argc, char *argv[])
+{
+	char *p;
+	int ch, fd;
+	int64_t human_num;
+
+	/* Get the type options */
+	while ((ch = getopt(argc, argv, "ab:i:s:t:T:")) != -1) {
+		switch(ch) {
+		case 'a':
+			if (all > 0)
+				usage_type();
+			all = 1;
+			break;
+		case 'b':
+			if (block > 0)
+				usage_type();
+			if (dehumanize_number(optarg, &human_num) < 0)
+				usage_type();
+			block = human_num;
+			if (block < 1)
+				usage_type();
+			break;
+		case 'i':
+			if (entry > 0)
+				usage_type();
+			entry = strtoul(optarg, &p, 10);
+			if (*p != 0 || entry < 1)
+				usage_type();
+			break;
+		case 's':
+			if (size > 0)
+				usage_type();
+			size = strtoll(optarg, &p, 10);
+			if (*p != 0 || size < 1)
+				usage_type();
+			break;
+		case 't':
+			if (!uuid_is_nil(&type, NULL))
+				usage_type();
+			if (parse_uuid(optarg, &type) != 0)
+				usage_type();
+			break;
+		case 'T':
+			if (!uuid_is_nil(&newtype, NULL))
+				usage_type();
+			if (parse_uuid(optarg, &newtype) != 0)
+				usage_type();
+			break;
+		default:
+			usage_type();
+		}
+	}
+
+	if (!all ^
+	    (block > 0 || entry > 0 || size > 0 || !uuid_is_nil(&type, NULL)))
+		usage_type();
+	if (uuid_is_nil(&newtype, NULL))
+		usage_type();
+
+	if (argc == optind)
+		usage_type();
+
+	while (optind < argc) {
+		fd = gpt_open(argv[optind++]);
+		if (fd == -1) {
+			warn("unable to open device '%s'", device_name);
+			continue;
+		}
+
+		chtype(fd);
+
+		gpt_close(fd);
+	}
+
+	return (0);
+}
